重構 GitHub Pages 部署流程，簡化配置並更新依賴；調整 ResizableHandle 類別的事件發送格式，新增位置和大小資訊；重構 FloatingWindow 類別，優化屬性初始化與事件管理，並更新主題顏色配置以提升可維護性。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,32 +2,29 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main # 或者是您的主分支名稱
-
-permissions:
-  contents: write
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Install Dependencies
-        run: npm ci
-
+          
+      - name: Install dependencies
+        run: |
+          npm install
+          npm ci
+          
       - name: Build
         run: npm run build
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+        
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          folder: dist
-          branch: gh-pages 
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist 
