--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.19"
+    "vite": "^6.2.0"
   }
 }
