調整 DAWContainer、DAWManager 和 Clip 組件，新增頂部控制欄和播放頭功能，優化片段的拖曳與調整大小邏輯，並更新時間軸顯示與事件管理，提升使用者體驗與可維護性。

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,14 +19,18 @@
     "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-    
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedIndexedAccess": false,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "noPropertyAccessFromIndexSignature": false,
     /* Additional Options */
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["node", "jest"]
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.spec.ts"]
 }
