--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # 或者是你的主要分支名稱
 
+permissions:
+  contents: write # 添加這個權限設置
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
